add intro cards

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <!--intro colors-->
+    <color name="activeDots">#181717</color>
+    <color name="inactiveDots">#C9C7C7</color>
+    <color name="lightGray">#CFCCCC</color>
+
 </resources>
