--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,16 +7,31 @@
     android:background="@drawable/splash_background"
     tools:context=".ui.fragment.LoginFragment">
 
+    <ProgressBar
+        android:id="@+id/Login_Fragment_ProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:translationZ="2dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/Login_Fragment_Password_Edit_Text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Password_Edit_Text" />
+
     <ImageView
         android:id="@+id/Login_Fragment_Logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_64dp"
+        android:contentDescription="@string/logo"
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/logo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/Login_Fragment_Phone_Edit_Text"
@@ -31,7 +46,7 @@
         android:hint="@string/phone_number"
         android:inputType="phone"
         android:padding="@dimen/dimen_8dp"
-        android:textAlignment="textEnd"
+        android:textAlignment="textStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Logo"
@@ -50,7 +65,7 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="@dimen/dimen_8dp"
-        android:textAlignment="textEnd"
+        android:textAlignment="textStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Phone_Edit_Text"
@@ -83,9 +98,9 @@
         android:layout_width="@dimen/dimen_0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_16dp"
-        android:background="@color/lightGreen"
         android:layout_marginTop="@dimen/dimen_24dp"
         android:layout_marginEnd="@dimen/dimen_16dp"
+        android:background="@color/lightGreen"
         android:fontFamily="@font/cairo_bold"
         android:text="@string/login"
         android:textColor="@android:color/white"
