--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,5 @@
     <dimen name="size_18sp">18sp</dimen>
     <dimen name="size_14sp">14sp</dimen>
     <dimen name="size_24sp">24sp</dimen>
+    <dimen name="dimen_2dp">2dp</dimen>
 </resources>
