--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -16,31 +16,24 @@
             android:layout_width="@dimen/dimen_0dp"
             android:layout_height="@dimen/dimen_60dp"
             android:background="@color/lightGray"
+            android:elevation="@dimen/dimen_4dp"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/Signup_Fragment_toolbar_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dimen_8dp"
-            android:layout_marginTop="@dimen/dimen_8dp"
-            android:layout_marginEnd="@dimen/dimen_8dp"
-            android:layout_marginBottom="@dimen/dimen_8dp"
-            android:fontFamily="@font/cairo_semibold"
-            android:text="@string/create_new_account"
-            android:textAlignment="center"
-            android:textColor="@color/buttons"
-            android:textSize="@dimen/size_24sp"
-            app:layout_constraintBottom_toBottomOf="@+id/Signup_Fragment_toolbar"
-            app:layout_constraintEnd_toEndOf="@+id/Signup_Fragment_toolbar"
-            app:layout_constraintStart_toStartOf="@+id/Signup_Fragment_toolbar"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            app:layout_constraintTop_toTopOf="parent" >
+            <TextView
+                android:id="@+id/Signup_Fragment_toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/cairo_semibold"
+                android:text="@string/create_new_account"
+                android:textAlignment="center"
+                android:textColor="@color/buttons"
+                android:textSize="@dimen/size_24sp" />
+        </androidx.appcompat.widget.Toolbar>
         <EditText
             android:id="@+id/Signup_Fragment_name_edittext"
             android:layout_width="@dimen/dimen_0dp"
@@ -48,7 +41,7 @@
             android:layout_marginStart="@dimen/dimen_16dp"
             android:layout_marginTop="@dimen/dimen_16dp"
             android:layout_marginEnd="@dimen/dimen_16dp"
-            android:background="@drawable/edit_text_without_boarder"
+            android:background="@drawable/edit_text_boarder"
             android:fontFamily="@font/cairo_semibold"
             android:hint="@string/name"
             android:inputType="textPersonName"
@@ -65,7 +58,7 @@
             android:layout_width="@dimen/dimen_0dp"
             android:layout_height="@dimen/dimen_50dp"
             android:layout_marginTop="@dimen/dimen_16dp"
-            android:background="@drawable/edit_text_without_boarder"
+            android:background="@drawable/edit_text_boarder"
             android:fontFamily="@font/cairo_semibold"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
@@ -82,7 +75,7 @@
             android:layout_width="@dimen/dimen_0dp"
             android:layout_height="@dimen/dimen_50dp"
             android:layout_marginTop="@dimen/dimen_16dp"
-            android:background="@drawable/edit_text_without_boarder"
+            android:background="@drawable/edit_text_boarder"
             android:drawableStart="@drawable/ic_calender"
             android:fontFamily="@font/cairo_semibold"
             android:hint="@string/birth_date"
@@ -100,7 +93,7 @@
             android:layout_width="@dimen/dimen_0dp"
             android:layout_height="@dimen/dimen_50dp"
             android:layout_marginTop="@dimen/dimen_16dp"
-            android:background="@drawable/edit_text_without_boarder"
+            android:background="@drawable/edit_text_boarder"
             android:fontFamily="@font/cairo_semibold"
             android:hint="@string/blood_type"
             android:inputType="textPersonName"
@@ -117,7 +110,7 @@
             android:layout_width="@dimen/dimen_0dp"
             android:layout_height="@dimen/dimen_50dp"
             android:layout_marginTop="@dimen/dimen_16dp"
-            android:background="@drawable/edit_text_without_boarder"
+            android:background="@drawable/edit_text_boarder"
             android:drawableStart="@drawable/ic_calender"
             android:fontFamily="@font/cairo_semibold"
             android:hint="@string/last_donate_date"
@@ -167,7 +160,7 @@
             android:layout_width="@dimen/dimen_0dp"
             android:layout_height="@dimen/dimen_50dp"
             android:layout_marginTop="@dimen/dimen_16dp"
-            android:background="@drawable/edit_text_without_boarder"
+            android:background="@drawable/edit_text_boarder"
             android:fontFamily="@font/cairo_semibold"
             android:hint="@string/phone_number3"
             android:inputType="phone"
@@ -184,7 +177,7 @@
             android:layout_width="@dimen/dimen_0dp"
             android:layout_height="@dimen/dimen_50dp"
             android:layout_marginTop="@dimen/dimen_16dp"
-            android:background="@drawable/edit_text_without_boarder"
+            android:background="@drawable/edit_text_boarder"
             android:fontFamily="@font/cairo_semibold"
             android:hint="@string/password"
             android:inputType="textPassword"
@@ -201,7 +194,7 @@
             android:layout_width="@dimen/dimen_0dp"
             android:layout_height="@dimen/dimen_50dp"
             android:layout_marginTop="@dimen/dimen_16dp"
-            android:background="@drawable/edit_text_without_boarder"
+            android:background="@drawable/edit_text_boarder"
             android:fontFamily="@font/cairo_semibold"
             android:hint="@string/retry_password"
             android:inputType="textPassword"
@@ -216,8 +209,8 @@
         <Button
             android:id="@+id/Signup_Fragment_register_btn"
             android:layout_width="@dimen/dimen_0dp"
-            android:layout_height="@dimen/dimen_40dp"
-            android:layout_marginTop="@dimen/dimen_16dp"
+            android:layout_height="@dimen/dimen_50dp"
+            android:layout_marginTop="24dp"
             android:layout_marginBottom="@dimen/dimen_16dp"
             android:background="@color/buttons"
             android:fontFamily="@font/cairo_bold"
