--- a/app/src/main/res/drawable/bg_spinner.xml
+++ b/app/src/main/res/drawable/bg_spinner.xml
@@ -2,6 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
+            <stroke android:color="#969595"
+                android:width="1dp"/>
             <solid android:color="@android:color/white"/>
         </shape>
     </item>
